Fixed #6, Fixed #7
